--- a/frontend/src/Main/Header/header.css
+++ b/frontend/src/Main/Header/header.css
@@ -9,6 +9,7 @@
     height: 80px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 5px 48px #0000000F;
+    z-index: 10;
 
     position: sticky;
     top: 0;
