--- a/frontend/src/style/loginForm.css
+++ b/frontend/src/style/loginForm.css
@@ -1,145 +1,256 @@
-.login_container{
-    width: 100%;
-    height: 100vh;
+
+*{
+    font-family: 'Open Sans', sans-serif;
+}
+.login-container {
 
     display: flex;
-    /* flex-direction: row; */
-    justify-content: center;
-    align-items: center;
 }
 
-/* left container */
-.login_container > .left_register_container{
-    width:50%;
-    height: 100vh;
-    padding-bottom: 100px;
+.half,
+.half-s {
 
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items:left;
+    width: 50%;
+    height: 87vh;
 }
 
-.login_container > .left_register_container > .rigster_container_header{
-    font-weight: 700;
-    color: #5861AE;
-    font-size: 90px;
-    text-transform: capitalize;
-    letter-spacing: 0px;
+.half-s {
+    position: relative;
+    z-index: 1;
+    background: #B9C0FD1A 0% 0% no-repeat padding-box;
+    height: 87vh;
+    opacity: 1;
+}
+
+.para-line-1,
+.line2,
+.line-3,
+.regitr-btn {
+    margin-left: 25%;
+    opacity: 1;
+}
+
+.para-line-1 {
+    margin-top: 15%;
+    width: 40vw;
     text-align: left;
-    margin-left: 130px;
-}
-.login_container > .left_register_container >.left_text_container >.rigster_container_text{
-    margin-top: 25px;
-    color: #565657;
-    letter-spacing: 0.8px;
+    font: normal normal 900 60px/80px Avenir;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 0px;
+    color: #5861AE;
     text-transform: capitalize;
-    font-size: 20px;
 }
-.login_container > .left_register_container > .left_text_container > p:nth-child(2){
-    margin-top: 30px;
+
+.line2 {
+
+    text-align: left;
+    font: normal normal normal 20px/26px Avenir;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 0.8px;
+    color: #565657;
+    text-transform: capitalize;
+
+}
+
+.line-3 {
+    margin-top: 10%;
+
+    text-align: left;
+    font: normal normal normal 16px/26px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.64px;
     color: #565657;
     text-transform: capitalize;
-    font-size: 16px;
-    margin-bottom: 30px;
+
 }
 
-.left_text_container{
-    margin-left: 130px;
-}
-.Regiter_link{
+.regitr-btn {
+    cursor: pointer;
+    width: 120px;
+    height: 40px;
     border: 2px solid #4552C1;
     border-radius: 4px;
-    padding: 10px 20px;
-    color: #4552C1;
+    text-align: center;
+    font: normal normal bold 15px/20px Open Sans;
     letter-spacing: 0.3px;
-    font-size: 15px;
+    color: #4552C1;
+    padding: 10px 20px;
+    background-color: transparent;
+    margin-top: 20px;
 }
 
-/* right container */
-.login_container > .right_login_container{
-    background: #B9C0FD1A 0% 0% no-repeat padding-box;
-    width:50%;
-    height: 100vh;
-    padding-bottom: 100px;
-
-    display: flex;
-    align-items: start;
-    flex-direction: column;
+.form-head,
+.login-form {
+    margin-left: 15%;
 }
-.login_container > .right_login_container > h2{
-    text-align: start;
-    margin-top: 100px;
-    font-size: 32px;
+
+.form-head {
+    margin-top: 15%;
+    width: 50%;
+    font-size: 35px;
+    height: 50px;
+    text-align: left;
+    margin-bottom: 8%;
     letter-spacing: 1.28px;
     color: #4552C1;
     text-transform: uppercase;
-    margin-left: 130px;
+    opacity: 1;
 }
 
-.login_container > .right_login_container > .right_container{
-    margin-top: 60px;
-    margin-left: 100px;
-    width: 350px;
-}
-.login_container > .right_login_container > .right_container form div{
-    width: 100%;
-    height: auto;
-    margin-bottom: 40px;
-}
-.login_container > .right_login_container > .right_container form div input{
-    background: #B9C0FD1A;
-    width: 100%;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 7px;
-    padding-top: 7px;
-    padding-left: 2px;
-    font-size: 17px;
-    letter-spacing: 0.6px;
-    color: black;
-    outline: none;
-    
-}
-.password-inbox{
-    position: relative;
-}
-.password-toggle{
-    position: absolute;
-    top: 0;
-    right: 0;
-    color: #ccc;
-}
-.login_container > .right_login_container > .right_container form p{
-    letter-spacing: 0.64px;
-    color: #4552C1;
-    text-transform: capitalize;
-    font-size: 16px;
-}
-.button_sign_in{
-    width: 100%;
+.form-email,
+.form-email-error,
+.form-pwd-error,
+.red-alert,
+.form-pwd {
+    width: 322px;
+    height: 27px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.forgot_password{
-    position: relative;
-    bottom: 50px;
-    left: 150px;
+    border: 0;
+    border-bottom: 1px solid #989898;
+    margin-bottom: 10%;
+    width: 60%;
+    text-align: left;
+    font: normal normal normal 17px/27px Open Sans;
+    letter-spacing: 0.6px;
+    color: #77838F;
+    background-color: #B9C0FD1A;
     cursor: pointer;
 }
-.sign_in_btn{
+
+.form-pwd,
+.form-pwd-error {
+    display: flexbox;
+    float: left;
+    margin-bottom: 15%;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="email"],
+input[type="tel"],
+textarea,
+select {
+
+    outline: none;
+}
+
+.form-email:hover,
+.form-email-error:hover,
+.form-pwd-error:hover,
+.form-pwd:hover {
+
+    border-bottom: 1px solid#4552C1;
+}
+
+.submit-sign-in {
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    border: 0;
     background: #4552C1 0% 0% no-repeat padding-box;
     border-radius: 4px;
-    border-radius: 4px;
-    padding: 10px 40px;
-    color: #fff;
+    text-align: center;
+    font: normal normal bold 15px/20px Open Sans;
     letter-spacing: 0.3px;
-    font-size: 15px;
-    border: none;
+    color: #FFFFFF;
+    opacity: 1;
+    margin-left: 15%;
+}
+
+.side-line {
+    position: relative;
+    right: 17.2%;
+    padding-left: 8.5%;
+    border-left: 2px solid #4552C1;
+    display: flexbox;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.form-email-error,
+.form-pwd-error {
+    color: Red;
+}
+
+.loading {
+    position: absolute;
+    top: 0;
+    left: 42%;
+    background: transparent;
+}
+
+.e-message {
+    color: red;
+    position: absolute;
+    left: 15%;
+    bottom: 120%;
+}
+
+.forgot-pwd {
+    margin-top: 20px;
+    position: relative;
+    right: 37%;
+    color: #4552C1;
     cursor: pointer;
+}
+
+.forgot-pwd:hover {
+    color: red;
+}
+
+@media screen and (max-width:600px) {
+    .para-line-1 {
+        font-size: 20px;
+
+    }
+
+    .line2,
+    .line-3,
+    .regitr-btn {
+        font-size: small;
+        width: auto;
+    }
+
+    .form-head {
+        font-size: large;
+    }
+
+    .form-email,
+    .form-pwd {
+        width: 110px;
+    }
+
+    .submit-sign-in {
+        width: auto;
+    }
+
+}
+
+@media screen and (max-width:786px) {
+    .para-line-1 {
+        font-size: 30px;
+
+    }
+
+    .line2,
+    .line-3,
+    .regitr-btn {
+        font-size: small;
+        width: auto;
+    }
+
+    .form-head {
+        font-size: large;
+    }
+
+    .form-email,
+    .form-pwd {
+        width: 110px;
+    }
+
+    .submit-sign-in {
+        width: auto;
+    }
+
 }
