--- a/frontend/src/componants/headers/header.css
+++ b/frontend/src/componants/headers/header.css
@@ -2,9 +2,13 @@
     display: flex;
     width: 100%;
     height: 375%;
-    background-color: #FFFFFF 0% 0% no-repeat padding-box;
+    background-color: #FFFFFF;
     box-shadow: 0px 2px 48px #0000000F;
     opacity: 1;
+
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .app-name {
@@ -13,6 +17,7 @@
     margin-left: 10%;
     text-align: left;
     font: normal normal 900 25px/25px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 1.8px;
     color: #5861AE;
     text-transform: uppercase;
@@ -33,6 +38,7 @@
     border: 0;
     opacity: 1;
     font: normal normal medium 14px/19px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 1.05px;
     color: #FFFFFF;
     text-transform: capitalize;
@@ -45,9 +51,10 @@
     opacity: 1;
     text-align: center;
     font: normal normal normal 14px/19px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 1.05px;
     color: #565657;
     text-transform: capitalize;
     border: 0;
-    border-left: 1px solid lightgrey;
+    /* border-left: 1px solid lightgrey; */
 }
