--- a/frontend/src/componants/login-registertion/login/login.css
+++ b/frontend/src/componants/login-registertion/login/login.css
@@ -8,14 +8,15 @@
 .half-s {
     
     width: 50%;
-    height: 87vh;
+    height: 100vh;
 }
 
 .half-s {
     position:  relative;
     z-index: 1;
     background: #B9C0FD1A 0% 0% no-repeat padding-box;
-    height: 87vh;
+    /* height: 87vh; */
+    height: 100vh;
     opacity: 1;
 }
 
@@ -32,6 +33,7 @@
     width: 40vw;
     text-align: left;
     font: normal normal 900 60px/80px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0px;
     color: #5861AE;
     text-transform: capitalize;
@@ -41,6 +43,7 @@
 
     text-align: left;
     font: normal normal normal 20px/26px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.8px;
     color: #565657;
     text-transform: capitalize;
@@ -52,6 +55,7 @@
 
     text-align: left;
     font: normal normal normal 16px/26px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.64px;
     color: #565657;
     text-transform: capitalize;
@@ -66,8 +70,10 @@
     border-radius: 4px;
     text-align: center;
     font: normal normal bold 15px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.3px;
     color: #4552C1;
+    background-color: transparent;
 }
 
 .form-head,
@@ -102,6 +108,7 @@
     width: 60%;
     text-align: left;
     font: normal normal normal 17px/27px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.6px;
     color: #77838F;
     background-color: #B9C0FD1A;
@@ -143,6 +150,7 @@ select {
     border-radius: 4px;
     text-align: center;
     font: normal normal bold 15px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.3px;
     color: #FFFFFF;
     opacity: 1;
