--- a/frontend/src/componants/login-registertion/registeration/registration.css
+++ b/frontend/src/componants/login-registertion/registeration/registration.css
@@ -4,13 +4,13 @@
 
 .para-data {
     width: 30%;
-    height: 90vh;
+    height: 100vh;
 }
 
 .form-data {
 
     width: 70%;
-    height: 90vh;
+    height: 100vh;
     background-color: #F8F9FF;
     opacity: 1;
 }
@@ -23,6 +23,7 @@
     height: 197px;
     text-align: left;
     font: normal normal 900 62px/80px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 2.48px;
     color: #5861AE;
     text-transform: capitalize;
@@ -36,6 +37,7 @@
     padding-left: 20%;
     text-align: left;
     font: normal normal normal 20px/32px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.8px;
     color: #565657;
     text-transform: capitalize;
@@ -60,12 +62,14 @@
     height: 50px;
     text-align: center;
     font: normal normal bold 15px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.3px;
     color: #5861AE;
     border: 2px solid #5861AE;
     border-radius: 4px;
     cursor: pointer;
     opacity: 1;
+    background-color: transparent;
 }
 
 .form-data {
@@ -93,6 +97,7 @@
     /* UI Properties */
     text-align: left;
     font: normal normal medium 32px/60px Avenir;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 1.28px;
     color: #5861AE;
     text-transform: uppercase;
@@ -108,6 +113,7 @@
     text-align: left;
     text-decoration: underline;
     font: normal normal normal 14px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.49px;
     color: #5861AE;
     opacity: 1;
@@ -124,6 +130,7 @@ label {
     text-align: left;
     text-decoration: underline;
     font: normal normal normal 14px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.49px;
     color: #5861AE;
     opacity: 1;
@@ -137,6 +144,7 @@ label {
     height: 50px;
     text-align: center;
     font: normal normal bold 15px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.3px;
     color: #FFFFFF;
     background: #5861AE 0% 0% no-repeat padding-box;
@@ -170,18 +178,20 @@ label {
 .popup img{
     margin-top: -70px;  
 }
-.popup-sub-btn{
+.popup-sub-btn {
     cursor: pointer;
     width: 150px;
-height: 50px;
-border: 0;
-text-align: center;
-font: normal normal bold 15px/20px Open Sans;
-letter-spacing: 0.3px;
-color: #FFFFFF;
-background: #4552C1 0% 0% no-repeat padding-box;
-border-radius: 4px;
+    height: 50px;
+    border: 0;
+    text-align: center;
+    font: normal normal bold 15px/20px Open Sans;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 0.3px;
+    color: #FFFFFF;
+    background: #4552C1 0% 0% no-repeat padding-box;
+    border-radius: 4px;
 }
-.form-err{
+
+.form-err {
     color: red;
 }
