--- a/frontend/src/componants/order/Summary/summary.css
+++ b/frontend/src/componants/order/Summary/summary.css
@@ -5,8 +5,12 @@
 #summary_holder{
     width: 98.9vw;
     min-height: 100vh;
-    position: fixed;
+    /* position: fixed; */
+
+    position: absolute;
     top:0;
+    right: 0;
+    z-index: 5;
     background-color: rgba(0, 0, 0, 0.315);
 }
 
@@ -24,6 +28,7 @@
     color: white;
     display: flex;
     justify-content: space-between;
+
 }
 
 #summary_header>*{
